# mycarisbroken

./: MOBILE_HOTSPOT_GUIDE.md  OBD_REALTIME_README.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REALTIME_SETUP.md  RPI_SETUP.md  START_HERE.md  install.sh  mac_client.py  obd_server.py  pyproject.toml  remote_control.sh  requirements_mac.txt  requirements_server.txt  setup_rpi.sh  setup_wifi.sh  test_obd.py  tox.ini
docs/: Command Lookup.md  index.md
obd/: utils.py
templates/: dashboard.html
tests/: README.md
