[project]
name = "obd"
version = "0.7.3"
authors = [
  { name="Brendan Whitfield", email="me@brendan-w.com" },
  { name="Alistair Francis", email="alistair@alistair23.me" },
  { name="Paul Bartek" },
  { name="Peter Harris" },
]
description = "Serial module for handling live sensor data from a vehicle's OBD-II port"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Monitoring",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 3 - Alpha",
    "Topic :: System :: Logging",
    "Intended Audience :: Developers",
]
keywords = ["obd", "obdii", "obd-ii", "obd2", "car", "serial", "vehicle", "diagnostic"]
dependencies = [
    "pyserial==3.*",
    "pint==0.24.*",
]
license = "GPL-2.0-only"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/brendan-w/python-OBD"
Issues = "https://github.com/brendan-w/python-OBD/issues"
